--- a/public/index.html
+++ b/public/index.html
@@ -11,5 +11,6 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <script type="text/javascript" src="dist/bundle.js" />
   </body>
 </html>
