--- a/public/index.html
+++ b/public/index.html
@@ -7,10 +7,11 @@
     <link rel="manifest" href="/assets/manifest.json">
     <link rel="shortcut icon" href="/assets/favicon.ico">
     <title>Understory</title>
+    <link href="/assets/css/styles.css" rel="stylesheet">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <script type="text/javascript" src="bundle.js"></script>
+    <script type="text/javascript" src="assets/js/bundle.js"></script>
   </body>
 </html>
