fix css webpacking

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <link rel="manifest" href="/assets/manifest.json">
     <link rel="shortcut icon" href="/assets/favicon.ico">
     <title>Understory</title>
-    <link href="/assets/css/styles.css" rel="stylesheet">
+    <link href="/assets/css/main.bundle.css" rel="stylesheet">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
