--- a/public/index.html
+++ b/public/index.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta name="theme-color" content="#000000">
     <link rel="manifest" href="/assets/manifest.json">
-    <link rel="shortcut icon" href="/assets/favicon.ico">
+    <link rel="shortcut icon" href="/favicon.ico">
     <title>Understory</title>
     <link href="/assets/css/main.bundle.css" rel="stylesheet">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <script type="text/javascript" src="assets/js/bundle.js"></script>
+    <script type="text/javascript" src="/assets/js/bundle.js"></script>
   </body>
 </html>
