finish building out client webpack config

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <link rel="manifest" href="/assets/manifest.json">
     <link rel="shortcut icon" href="/favicon.ico">
     <title>Understory</title>
+    {{> fonts}}
     <link href="/assets/css/main.bundle.css" rel="stylesheet">
   </head>
   <body>
