--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,14 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root">{{{htmlWebpackPlugin.options.app}}}</div>
+    <div id="root">
+      \{{#if isProd}}
+        <div>\{{{markup}}}</div>
+      \{{/if}}
+    </div>
+
+    \{{#if isDev}}
+      <script src="assets/js/bundle.js"></script>
+    \{{/if}}
   </body>
 </html>
