--- a/public/index.html
+++ b/public/index.html
@@ -12,13 +12,7 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root">
-      \{{#if isProd}}
-        <div>\{{{markup}}}</div>
-      \{{/if}}
+      <div>{{> react}}</div>
     </div>
-
-    \{{#if isDev}}
-      <script src="assets/js/bundle.js"></script>
-    \{{/if}}
   </body>
 </html>
