--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500">
     <link rel="manifest" href="/assets/manifest.json">
     <link rel="shortcut icon" href="/favicon.ico">
-    <title>Understory</title>
+    <title>Understory Update</title>
     {{> fonts}}
   </head>
   <body>
